add-btn change and common modal change

--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/DataDict/Index.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/DataDict/Index.cshtml
@@ -84,5 +84,5 @@
         </div>
     </div>
 </div>
-@await Component.InvokeAsync(typeof(CommonModalViewComponent), new { modalName = "DataDictEdit", modalTitle = @L("EditDataDictionary"),width="600px",height="320px" })
+@await Component.InvokeAsync(typeof(CommonModalViewComponent), new { modalName = "DataDictEdit",width="600px",height="320px" })
 
