--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/Localization/Index.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/Localization/Index.cshtml
@@ -88,7 +88,7 @@
         </div>
     </div>
 </div>
-@await Component.InvokeAsync(typeof(CommonModalViewComponent), new { modalName = "LanguageTextCreate", modalTitle = @L("AddLanguageText"), width = "600px", height = "400px" })
+@await Component.InvokeAsync(typeof(CommonModalViewComponent), new { modalName = "LanguageTextCreate", width = "600px", height = "400px" })
 @await Component.InvokeAsync(typeof(CommonModalViewComponent), new { modalName = "LanguageTextCopy", modalTitle = @L("CopyLanguageText"), width = "600px", height = "400px" })
 @await Component.InvokeAsync(typeof(CommonModalViewComponent), new { modalName = "LanguageTextEdit", modalTitle = @L("EditLanguageText"), width = "600px", height = "400px" })
 
