--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/SysObject/_EditModal.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/SysObject/_EditModal.cshtml
@@ -2,7 +2,8 @@
 @using System.Collections.Generic
 @model Fostor.Ginkgo.Web.Areas.Admin.Models.SysObjectViewModel
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Modal.cshtml";
+    ViewBag.ModalTitle = L("EditSysObject");
 }
 <form name="SysObjectEditForm" role="form" novalidate class="form-validation form-horizontal">
     <input type="hidden" name="Id" value="@Model.SysObject.Id" />
@@ -86,6 +87,10 @@
         </div>
     </div>
 </form>
+@section modalfooter
+    {
+    <button type="button" class="btn btn-primary save-button waves-effect">@L("Save")</button>
+}
 <script src="~/view-resources/Admin/SysObject/_EditModal.js" asp-append-version="true"></script>
 
 
