--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/TaskFlow/Views/Flow/EditFlow.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/TaskFlow/Views/Flow/EditFlow.cshtml
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <div class="pull-right">
-                            <button type="button" class="btn btn-default edit-close-button waves-effect" style="margin-right:30px;" data-dismiss="modal">@L("Cancel")</button>
+                            <button type="button" class="btn btn-default edit-close-button waves-effect" style="margin-right:30px;" >@L("Close")</button>
                             <button type="button" class="btn btn-primary edit-save-button waves-effect">@L("Save")</button>
                         </div>
                     </div>
