--- a/src/Fostor.Ginkgo.Web.Mvc/Views/Shared/Components/CommonModal/Default.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Views/Shared/Components/CommonModal/Default.cshtml
@@ -2,14 +2,14 @@
 <div class="modal fade" id="@(Model.ModalName+"Modal")" tabindex="-1" role="dialog" aria-labelledby="@(Model.ModalName+"ModalLabel")" data-backdrop="static">
     <div class="modal-dialog" role="document" style="width:@Model.Width;height:@Model.Height;min-height:180px;min-width:300px;">
         <div class="modal-content">
-            <div class="modal-header">
+            @*<div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
                 <div class="col-md-8">
                     <h4 class="modal-title m-l--15">
                         <span>@Model.ModalTitle</span>
                     </h4>
                 </div>
-                <span class="close pull-right" data-dismiss="modal"><i class="material-icons ">close</i></span>
+                <span class="close close-button pull-right" data-dismiss="modal"><i class="material-icons ">close</i></span>
             </div>
             <div class="modal-body common-modal-body" id="@(Model.ModalName+"ModalBody")" style="overflow-x:hidden;overflow-y:auto;">
             </div>
@@ -19,10 +19,11 @@
                 {
                     <button type="button" class="btn btn-primary save-button waves-effect">@L("Save")</button>
                 }
-            </div>
+            </div>*@
         </div>
     </div>
 </div>
+
 
 
 
