--- a/src/Fostor.Ginkgo.Web.Mvc/Views/Shared/Components/DatePicker/Default.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Views/Shared/Components/DatePicker/Default.cshtml
@@ -14,6 +14,6 @@
     <div class="form-line">
         <input type="text" class="form-control" name="@Model.TagName" value="@Model.Value" @(Model.IsDisabled ? "disabled" : "") @(Model.IsRequired == true ? "required" : "")>
     </div>
-    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+    <span class="input-group-addon col-teal"><i class="glyphicon glyphicon-calendar"></i></span>
 </div>
 
