--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/Localization/_CopyModal.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/Localization/_CopyModal.cshtml
@@ -2,7 +2,8 @@
 @using System.Collections.Generic
 @using Fostor.Ginkgo
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Modal.cshtml";
+    ViewBag.ModalTitle = L("CopyLanguageText");
 }
 <form name="LanguageTextCopyForm" role="form" novalidate class="form-validation form-horizontal">
     <div class="modal-body">
@@ -24,6 +25,10 @@
         </div>
     </div>
 </form>
+@section modalfooter
+    {
+    <button type="button" class="btn btn-primary save-button waves-effect">@L("Save")</button>
+}
 <script src="~/view-resources/Admin/Localization/_CopyModal.js" asp-append-version="true"></script>
 
 
