--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/SysObject/Index.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/SysObject/Index.cshtml
@@ -66,7 +66,7 @@
         </div>
     </div>
 </div>
-@await Component.InvokeAsync(typeof(CommonModalViewComponent), new { modalName = "SysObjectCreate", modalTitle = @L("AddSysObject") })
-@await Component.InvokeAsync(typeof(CommonModalViewComponent), new { modalName = "SysObjectEdit", modalTitle = @L("EditSysObject") })
+@await Component.InvokeAsync(typeof(CommonModalViewComponent), new { modalName = "SysObjectCreate" })
+@await Component.InvokeAsync(typeof(CommonModalViewComponent), new { modalName = "SysObjectEdit" })
 
 
