--- a/src/Fostor.Ginkgo.Web.Mvc/wwwroot/css/style.css
+++ b/src/Fostor.Ginkgo.Web.Mvc/wwwroot/css/style.css
@@ -4542,7 +4542,7 @@ section.content {
 
 /* Tables ====================================== */
 .table tbody tr td, .table tbody tr th {
-    padding: 2px;
+    padding: 3px;
     border-top: 1px solid #e9e9e9;
     border-bottom: 1px solid #e9e9e9;
 }
@@ -4551,8 +4551,17 @@ section.content {
   background-color: #1f91f3;
   color: #fff; }
 .table tbody tr.selected {
-    background-color: #CCE9FF;
-    color: #000;
+    /*background-color: #CCE9FF;*/
+    color: #2196f3;
+}
+.table tbody tr.even {
+    background-color: #f5f6f7; /* #e0eeee */
+}
+.table tbody tr td div a,.table tbody tr td a {
+    height:20px;
+    text-align:center;
+    color:#03a9f4;
+
 }
 
 .table tbody tr.success td, .table tbody tr.success th {
@@ -4572,15 +4581,15 @@ section.content {
   color: #fff; }
 .table thead tr th {
     padding: 3px;
-    border: 1px solid #fff; /* #e9e9e9 */
-    background-color: #B8CEFF; /*  #869ac2    #6495ED  #E0ECFF  #d9edf7*/
-    color: #31708f; /* #fff   #31708f  #008FC8 */
-    font-weight: 700;
+    border: 1px solid #ccc; /* #e9e9e9 */
+    background-color: #d9edf7; /* #d9edf7 #B8CEFF #869ac2    #6495ED  #E0ECFF  #d9edf7*/
+    color: #3c85a9; /* #fff   #31708f  #008FC8 */
+    font-weight: 600;
 }
 /* fixed datepicker header */
 .dtp table.dtp-picker-days thead tr th {
-    background: #eee; /* #8BC34A */
-    /*color: #fff;*/
+    background: #eee; /* #8BC34A */    
+    border: 1px solid #e9e9e9;
 }
 
 .table thead tr th {
@@ -4592,13 +4601,20 @@ section.content {
     border-top: 1px solid #e9e9e9;
 }
     .table-bordered tbody tr td, .table-bordered tbody tr th {
-        padding: 1px;
+        padding: 3px;
         border: 1px solid #e9e9e9;/* #eee */
     }
     .table-bordered thead tr th {
         padding: 3px;
-        border: 1px solid #e9e9e9;
+        border: 1px solid #ccc;
     }
+table.dataTable {
+    clear:both;
+    margin-top:0px !important;
+    margin-bottom:3px !important;
+    max-width:none !important;
+    border-collapse:separate !important;
+}
 
 /* Panel ======================================= */
 .panel-group .panel-col-red {
@@ -7451,15 +7467,16 @@ fieldset[disabled] .form-control {
     margin-bottom: -5px; }
     .dropdown-menu .footer a:hover {
       background-color: transparent; }
-  .dropdown-menu > li > a {
-    padding: 7px 18px;
-    color: #666;
-    -moz-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
-    font-size: 14px;
-    line-height: 25px; }
+    .dropdown-menu > li > a {
+        padding: 3px 10px; /* 7px 18px */
+        color: #666;
+        -moz-transition: all 0.5s;
+        -o-transition: all 0.5s;
+        -webkit-transition: all 0.5s;
+        transition: all 0.5s;
+        font-size: 14px;
+        line-height: 25px;
+    }
     .dropdown-menu > li > a:hover {
       background-color: rgba(0, 0, 0, 0.075); }
     .dropdown-menu > li > a i.material-icons {
@@ -7473,6 +7490,14 @@ fieldset[disabled] .form-control {
   -moz-animation-duration: .3s !important;
   -o-animation-duration: .3s !important;
   animation-duration: .3s !important; }
+.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
+    color: #3c85a9;
+    padding: 3px 10px;
+    font-weight: 600;
+    text-decoration: none;
+    background-color: #d9edf7;
+    outline: 0;
+}
 
 /* Left Sidebar & Overlay ====================== */
 .overlay {
