--- a/src/Fostor.Ginkgo.Web.Mvc/Views/Users/_EditUserModal.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Views/Users/_EditUserModal.cshtml
@@ -77,7 +77,7 @@
                         {
                             <div class="col-sm-6">
                                 <input type="checkbox" name="role" value="@role.NormalizedName" title="@role.Description" class="filled-in" id="@string.Format("role{0}",role.Id)" @(Model.UserIsInRole(role) ? "checked" : "") />
-                                <label for="@string.Format("role{0}",role.Id)" title="@role.DisplayName">@role.Name</label>
+                                <label for="@string.Format("role{0}",role.Id)" title="@role.DisplayName">@role.DisplayName</label>
                             </div>
                         }
                     </div>
