--- a/src/Fostor.Ginkgo.Web.Mvc/Views/Users/_EditUserModal.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Views/Users/_EditUserModal.cshtml
@@ -102,5 +102,5 @@
         </div>
     </form>
 </div>
-@Html.Partial("~/Views/Shared/Modals/_ModalFooterWithSaveAndCancel.cshtml")
+@await Html.PartialAsync("~/Views/Shared/Modals/_ModalFooterWithSaveAndCancel.cshtml")
 <script src="~/view-resources/Views/Users/_EditUserModal.js" asp-append-version="true"></script>
