--- a/src/Fostor.Ginkgo.Web.Mvc/Views/Users/Index.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Views/Users/Index.cshtml
@@ -152,7 +152,7 @@
                                     {
                                         <div class="col-sm-6">
                                             <input type="checkbox" name="role" value="@role.NormalizedName" title="@role.Description" class="filled-in" id="role-@role.Id" />
-                                            <label for="role-@role.Id" title="@role.DisplayName">@role.Name</label>
+                                            <label for="role-@role.Id" title="@role.DisplayName">@role.DisplayName</label>
                                         </div>
                                     }
                                 </div>
